--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
@@ -14,42 +15,39 @@
 
 <body>
 
-  <div id="main_content">
-    <div id="top-info">
-      <img id="avatar" src="assets/images/avatar.jpg" />
-      <p class="title">Amit Kaushik</p>
-      <p class="subtitle">Mern Stack Developer | Innovator | Scale Systems</p>
-      <div class="logos" style="margin-top: 50px;">
-        <div class="logo" onclick="window.open('https://www.mongodb.com/2','_blank')">
-          <img src="assets/images/M.png" style="margin-right: 23px;" height="50" />
-        </div>
-        <div class="logo" onclick="window.open('https://expressjs.com/','_blank')">
-          <img src="assets/images/E.png" style="margin-right: 20px;" height="50" />
-        </div>
-        <div class="logo" onclick="window.open('https://reactjs.org/','_blank')">
-          <img src="assets/images/R.png" style="margin-right: 20px;" height="50" />
-        </div>
-        <div class="logo" onclick="window.open('https://nodejs.org/en/about/')">
-          <img src="assets/images/N.png" height="50" />
-        </div>
+  <div id="top-info">
+    <img id="avatar" src="assets/images/avatar.jpg" />
+    <p class="title">Amit Kaushik</p>
+    <p class="subtitle">Mern Stack Developer | Innovator | Scale Systems</p>
+    <div class="logos" style="margin-top: 50px;">
+      <div class="logo" onclick="window.open('https://www.mongodb.com/2','_blank')">
+        <img src="assets/images/M.png" style="margin-right: 23px;" class="logo-img" />
       </div>
-      <div class="logos" style="margin-top: 50px;">
-        <div class="logo" onclick="window.open('https://github.com/kaushikabhi999','_blank')">
-          <img src="assets/images/github.png" style="margin-right: 23px;" height="50" />
-        </div>
-        <div class="logo" onclick="window.open('https://www.linkedin.com/in/amit-kaushik-b20240104/','_blank')">
-          <img src="assets/images/in.png" style="margin-right: 20px;" height="50" />
-        </div>
-        <div class="logo"
-          onclick="window.open('https://stackoverflow.com/users/12742361/amit-kaushik?tab=profile','_blank')">
-          <img src="assets/images/stack.png" style="margin-right: 20px;" height="50" />
-        </div>
-        <div class="logo" onclick="window.open('https://twitter.com/kaushikabhi999')">
-          <img src="assets/images/twitter.png" height="50" />
-        </div>
+      <div class="logo" onclick="window.open('https://expressjs.com/','_blank')">
+        <img src="assets/images/E.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
+      <div class="logo" onclick="window.open('https://reactjs.org/','_blank')">
+        <img src="assets/images/R.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
+      <div class="logo" onclick="window.open('https://nodejs.org/en/about/')">
+        <img src="assets/images/N.png" class="logo-img" />
       </div>
     </div>
-
+    <div class="logos" style="margin-top: 50px;">
+      <div class="logo" onclick="window.open('https://github.com/kaushikabhi999','_blank')">
+        <img src="assets/images/github.png" style="margin-right: 23px;" class="logo-img" />
+      </div>
+      <div class="logo" onclick="window.open('https://www.linkedin.com/in/amit-kaushik-b20240104/','_blank')">
+        <img src="assets/images/in.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
+      <div class="logo"
+        onclick="window.open('https://stackoverflow.com/users/12742361/amit-kaushik?tab=profile','_blank')">
+        <img src="assets/images/stack.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
+      <div class="logo" onclick="window.open('https://twitter.com/kaushikabhi999')">
+        <img src="assets/images/twitter.png" class="logo-img" />
+      </div>
+    </div>
   </div>
 
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
