Added Angular and Gmail

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <div class="logo" onclick="window.open('https://reactjs.org/','_blank')">
         <img src="assets/images/R.png" style="margin-right: 20px;" class="logo-img" />
       </div>
+      <div class="logo" onclick="window.open('https://angular.io/','_blank')">
+        <img src="assets/images/A.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
       <div class="logo" onclick="window.open('https://nodejs.org/en/about/')">
         <img src="assets/images/N.png" class="logo-img" />
       </div>
@@ -41,11 +44,17 @@
         <img src="assets/images/in.png" style="margin-right: 20px;" class="logo-img" />
       </div>
       <div class="logo"
-        onclick="window.open('https://stackoverflow.com/users/12742361/amit-kaushik?tab=profile','_blank')">
-        <img src="assets/images/stack.png" style="margin-right: 20px;" class="logo-img" />
+        onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=kaushikabhi999@gmail.com','_blank')">
+        <img src="assets/images/gmail.png"
+          style="background-color: rgba(211, 211, 211, 0.25);margin-right: 20px; padding: 6px; border-radius: 50%;"
+          width="40" height="40" />
       </div>
       <div class="logo" onclick="window.open('https://twitter.com/kaushikabhi999')">
-        <img src="assets/images/twitter.png" class="logo-img" />
+        <img src="assets/images/twitter.png" style="margin-right: 20px;" class="logo-img" />
+      </div>
+      <div class="logo"
+        onclick="window.open('https://stackoverflow.com/users/12742361/amit-kaushik?tab=profile','_blank')">
+        <img src="assets/images/stack.png" class="logo-img" />
       </div>
     </div>
   </div>
