--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
   <div id="top-info">
     <img id="avatar" src="assets/images/avatar.jpg" />
     <p class="title" id="title">Amit Kaushik</p>
-    <p class="subtitle">Mern Stack Developer | Innovator | Scale Systems</p>
-    <div class="logos" style="margin-top: 50px;">
+    <p class="subtitle">AWS Full Stack Developer | Innovator | Scale Systems</p>
+    <img id="tcs" src="assets/images/TCS.png" />
+    <div class="logos" style="margin-top: 2%;">
       <div class="logo" onclick="window.open('https://www.mongodb.com/2','_blank')">
         <img src="assets/images/M.png" style="margin-right: 23px;" class="logo-img" />
       </div>
